fix image stretch

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -13,7 +13,7 @@
 #shape-friends-img {
   position: absolute;
   height: 254px;
-  width: 300px;
+  width: 254px;
   bottom: 93px;
   left: calc(50vw - 160px);
 }
